--- a/templates/blog.html
+++ b/templates/blog.html
@@ -50,6 +50,6 @@
 </div>
 
 </body>
-    <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="https://code.jquery.com/jquery.js"></script>
     <script type="text/javascript" src="{% static 'javascript/main.js' %}"></script>
 </html>
